Added spawning npc with interaction